Add attribute divs to pathways and spectras.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1432 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
@@ -458,3 +458,10 @@ input.resizable{
 #spectrumbrowser table{
     border: 0px;
 }
+
+.specs {
+    background-color: #f4f4f4;
+    border: 1px;
+    font-size: small;
+    padding: 5px;
+}
