svg-css changes
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1465 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
@@ -465,3 +465,25 @@ input.resizable{
     font-size: small;
     padding: 5px;
 }
+
+
+/*SVG Pathways classes*/
+.compartment {
+}
+
+.svgTextLink{
+    text-decoration : underline;
+}
+
+
+.svgSpeciesCurrent{
+    fill: #E2AF7B;
+}
+
+.svgSpeciesLink{
+    /*fill: red;*/
+}
+
+.svgTextLink:hover{
+    fill-opacity: 0.6;
+}
