Tidy up dependencies under metabolitght-utils module minor tweaks of alt/entry in the webapp
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1576 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
@@ -426,9 +426,13 @@ a.hide_closer{
     display: none;
 }
 
-tr.coloured{
-    background: #e8e8e8;
-}
+
+/*tr:nth-child(odd)		{ background-color:#eee; }*/
+tr:nth-child(even)		{ background-color: #ebebeb; }
+
+/*tr.coloured{*/
+    /*background: #e8e8e8;*/
+/*}*/
 
 .publication{
     border: 1px;
