Improve emails to use HTML template.
Make confirm account request URLsafe for the email (failed when email had +)


git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1587 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/email_template/htmlemail.vm
+++ b/metabolights-webapps/src/main/resources/email_template/htmlemail.vm
@@ -1,7 +1,11 @@
 <html>
 <body>
+<H2>MetaboLights email</H2>
+<P>
 ${body}
+</P>
 
+<h3><img src="http://www.ebi.ac.uk/metabolights/img/MetaboLightsLogo.png">MetaboLights Team</h3>
 <div style="color:white">
     ${technicalInfo}
 </div>
