Change url to request maf data in the webapp Add links for a chebi id metabolite identified. Enable BIOJS compound Load MAF data when clicking in the metabolites accordion.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1591 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
@@ -497,3 +497,7 @@ input.resizable{
 a[href^="#tabs"] span.icon{
     font-size: 72%;
 }
+H4 span.icon{
+    font-size: 72%;
+    color: #336B7B;
+}
