Avoid sending lots of spaces and tab (jsp) New Species page PROTOTYPE (working with STATIC real data....not reaching species level) Links to model organisms doesn't work since search page has a bug when passing arguments.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1640 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/cssrl/test-scheme.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/test-scheme.css
@@ -167,6 +167,50 @@ body.expander div#global { border-bottom: 1px solid #111; }
 body.expander div#local { border-top: 1px solid #70D3D3; }
 
 
+.species .icon{
+    font-size: 120%;
+    list-style-type: none;
+    font-style: italic;
+}
+.species .icon-species:before {
+    color: #C58A4D;
+    font-style: normal;
+}
+
+
+
+/* d3 speciescope styles */
+.node {
+    cursor: pointer;
+}
+
+.node:hover {
+    stroke: #fff;
+    stroke-width: 1.5px;
+}
+
+.node--root {
+    stroke: #777;
+    stroke-width: 2px;
+}
+
+.node--leaf {
+    fill: #dddddd;
+}
+
+.label {
+    font: 11px "Helvetica Neue", Helvetica, Arial, sans-serif;
+    text-anchor: middle;
+    text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, -1px 0 0 #fff, 0 -1px 0 #fff;
+}
+
+.label,
+.node--root,
+.node--leaf {
+    pointer-events: none;
+}
+
+
 /* Palette color codes */
 
 .primary-1 { background-color: #C58A4D}
