--- a/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
@@ -2,6 +2,16 @@
  * EBI MetaboLights - http://www.ebi.ac.uk/metabolights
  * Cheminformatics and Metabolism group
  *
+ * Last modified: 12/02/14 12:51
+ * Modified by:   kenneth
+ *
+ * Copyright 2014 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
+ */
+
+/*
+ * EBI MetaboLights - http://www.ebi.ac.uk/metabolights
+ * Cheminformatics and Metabolism group
+ *
  * Last modified: 12/02/14 12:35
  * Modified by:   kenneth
  *
@@ -537,7 +547,7 @@ H4 span.icon{
 
 .overlay{ background-color: #f8f8f8; }
 /*.node circle { fill: #fff; stroke: #804D19; stroke-width: 2px; }*/
-.node text { font-size:18px; font-family:sans-serif; }
+.node text { font-size:14px; font-family:sans-serif; }
 .link { fill: none; stroke: #ccc; stroke-width: 1px; }
 /*.templink { fill: none; stroke: red; stroke-width: 3px; }*/
 /*.ghostCircle.show{ display:block; }*/
