Indicate page is loading before going loading a study.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1656 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
@@ -557,3 +557,10 @@ H4 span.icon{
 .leaf { fill: #ffffff; stroke: #804D19; stroke-width: 1px; }
 .branch { fill: #804D19; stroke: #804D19; stroke-width: 1px; }
 /*circle .leaf { fill: #E2AF7B; stroke: #E2AF7B; stroke-width: 2px; }*/
+
+#wait{
+    margin-top: 100px;
+}
+#wait img{
+    width:100px;
+}
