Show a more accurate page title for Studies and compounds Indicate more clearly that the study is private in the entry page.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1660 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
@@ -137,8 +137,12 @@ th, td {
     -webkit-border-radius:5px 5px 5px 5px;
 }
 
-.title a, .title  a:link, .title a:visited,
-.title a span.icon-functional::before, .title a span.icon-generic::before
+.title a,
+.title a:link,
+.title a:visited,
+.title a span.icon-functional::before,
+.title a span.icon-generic::before,
+.title span.icon-functional::before
 {
     color: #ffffff;
 }
