- Tweaks to "welcome" email
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1704 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/email_template/htmlemail.vm
+++ b/metabolights-webapps/src/main/resources/email_template/htmlemail.vm
@@ -4,8 +4,9 @@
 <P>
 ${body}
 </P>
-
-<h3><img src="http://www.ebi.ac.uk/metabolights/img/MetaboLightsLogo.png">MetaboLights Team</h3>
+</P>
+Kind Regards, <br>
+<h3><img src="http://www.ebi.ac.uk/metabolights/img/MetaboLightsLogo.png"> The MetaboLights Team</h3>
 <div style="color:white">
     ${technicalInfo}
 </div>
