Use dataTable javascript in altEntry.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1728 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
@@ -493,6 +493,11 @@ input.resizable {
     border: 0px;
 }
 
+table.clean{
+    border: none;
+    margin: 5px;
+}
+
 
 #spectrumbrowser tr:nth-child(even)
 ,#spectrumbrowserms tr:nth-child(even)
