Style tweaks in tabs. Show title in altEntry
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1735 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
@@ -236,6 +236,11 @@ html.fontface .helpGeneric:before {
     min-height: 200px;
 }
 
+/*Tab container*/
+.tabContainer{
+    border : none !Important;
+}
+
 /* centered items */
 .center {
     text-align: center;
