More style tweaks in tabs.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1736 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
@@ -234,11 +234,15 @@ html.fontface .helpGeneric:before {
 /* Tab style */
 .tab {
     min-height: 200px;
+    padding: 2em 0 0 0 !Important;
 }
 
 /*Tab container*/
 .tabContainer{
     border : none !Important;
+}
+.tabHeader{
+    border: none !Important;
 }
 
 /* centered items */
@@ -515,7 +519,7 @@ table.clean{
     border: 1px;
     font-size: small;
     padding: 5px;
-    width: 98%;
+    /*width: 98%;*/
     margin: auto;
 }
 
