Link to MTBLC pages when possible. Display MTBLC id in the compound widget.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1746 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/css/ChEBICompound.css
+++ b/metabolights-webapps/src/main/webapp/css/ChEBICompound.css
@@ -5,6 +5,8 @@ div.ChEBICompound {
     margin: 0px;
     overflow: hidden;
     background-color: white;
+    box-shadow: 10px 10px 5px #888888;
+    border:1px solid #d3d3d3;
 }
 
 div.ChEBICompound_image {
@@ -69,7 +71,7 @@ div.ChEBICompound_tab div.content p {
 div.ChEBICompound_tab div.content div.star {
     background-image: url('../img/ebi-icons/32px/star_yellow.png');
     background-size: 16px 16px;
-    background-repeat: repeat-x;
+    /*background-repeat: repeat-x;*/
     width: 16px;
     height: 16px;
     margin: 0 7px 0 7px;
