First complete version of the revamp refCompound page. Still things to tweak.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1753 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
@@ -638,3 +638,15 @@ H4 span.icon {
     margin: 5px;
 }
 
+section {
+    padding-top: 50px;
+}
+
+section h3,
+#slide li{
+    background: #E2BD97;
+    padding: 6px;
+    margin: 2px;
+    list-style-type: none;
+}
+
