Tweaks in import metabolites page Add back the old compound page.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1769 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
@@ -646,7 +646,17 @@ section h3,
 #slide li{
     background: #E2BD97;
     padding: 6px;
+}
+
+#slide li{
     margin: 2px;
     list-style-type: none;
 }
 
+section h3{
+    margin-bottom: 20px;
+}
+
+#BioJSReaction {
+    min-height: 250px;
+}
