--- a/metabolights-webapps/src/main/webapp/cssrl/test-scheme.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/test-scheme.css
@@ -33,6 +33,7 @@
 
 #####  Color Palette by Color Scheme Designer
 #####  Palette URL: http://colorschemedesigner.com/#0.623juoMw0w0
+#####  New site --> http://paletton.com/#uid=60-0F0kjvoJ9eD7ettNnFkrt6f0
 #####  Color Space: RGB; 
 
 
