--- a/metabolights-webapps/src/main/webapp/cssrl/dataTable.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/dataTable.css
@@ -40,18 +40,19 @@ table.dataTable tfoot th {
 table.dataTable thead th,
 table.dataTable thead td {
     padding: 10px 18px;
-    border-bottom: 1px solid #111111; }
+    border-bottom: 0px solid #111111; }
 table.dataTable thead th:active,
 table.dataTable thead td:active {
     outline: none; }
 table.dataTable tfoot th,
 table.dataTable tfoot td {
     padding: 10px 18px 6px 18px;
-    border-top: 1px solid #111111; }
+    border-top: 0px solid #111111; }
 table.dataTable thead .sorting_asc,
 table.dataTable thead .sorting_desc,
 table.dataTable thead .sorting {
     cursor: pointer;
+    background-color: #E2AF7B !important;
     *cursor: hand; }
 table.dataTable thead .sorting {
     background: url("../img/sort_both.png") no-repeat center right; }
@@ -94,7 +95,7 @@ table.dataTable.hover tbody tr.odd:hover,
 table.dataTable.hover tbody tr.even:hover, table.dataTable.display tbody tr:hover,
 table.dataTable.display tbody tr.odd:hover,
 table.dataTable.display tbody tr.even:hover {
-    background-color: whitesmoke; }
+    background-color: #E2BD97; }
 table.dataTable.hover tbody tr:hover.selected,
 table.dataTable.hover tbody tr.odd:hover.selected,
 table.dataTable.hover tbody tr.even:hover.selected, table.dataTable.display tbody tr:hover.selected,
@@ -262,7 +263,8 @@ table.dataTable td {
     float: left; }
 .dataTables_wrapper .dataTables_filter {
     float: right;
-    text-align: right; }
+    text-align: right;
+    margin-bottom: 4px;}
 .dataTables_wrapper .dataTables_filter input {
     margin-left: 0.5em; }
 .dataTables_wrapper .dataTables_info {
@@ -381,7 +383,7 @@ table.dataTable td {
     margin: 0 !important;
     padding: 0 !important; }
 .dataTables_wrapper.no-footer .dataTables_scrollBody {
-    border-bottom: 1px solid #111111; }
+    border-bottom: 0px solid #111111; }
 .dataTables_wrapper.no-footer div.dataTables_scrollHead table,
 .dataTables_wrapper.no-footer div.dataTables_scrollBody table {
     border-bottom: none; }
