Add numbers to the publication list.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1801 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
@@ -702,3 +702,11 @@ div.accordion h5 span{
 
     vertical-align: middle;
 }
+
+legend span.ebiicon{
+    vertical-align: middle;
+    background-color: #ffffff;
+}
+legend span.ebiicon:hover{
+    background-color: #ffffff;
+}
