Model: Calculated property for User FullName for the facets. Webapp: Check returned study by the ws is Private (so far checking if it's null) to trigger login. Some teaks in the new search page. Search: Allow connection to elastic search at anytime. SO we can startup the webservice an later elastic search.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1854 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/elements/study_search.css
+++ b/metabolights-webapps/src/main/webapp/elements/study_search.css
@@ -2,6 +2,12 @@
 	outline-color: #C58A4D;
 }
 
+aside {
+	float: right !important;
+	top: -45px;
+	display: none;
+}
+
 @media screen and (min-width:600px) {
 	.facets{
 		float: left;
