Study validation tab added to entry page

--- a/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
@@ -57,6 +57,14 @@ div#local-title.logo-title span {
     padding-right: 0px;
 }
 
+.iconTick {
+    color : lightgreen;
+}
+
+.iconCross {
+    color : red;
+}
+
 div .box {
     background-color: #ffffff;
     margin: 3px 0px 3px 0px;
