Accordion tabs added for validation message passing

--- a/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
@@ -58,11 +58,15 @@ div#local-title.logo-title span {
 }
 
 .iconTick {
-    color : lightgreen;
+    color : darkgreen;
 }
 
 .iconCross {
-    color : red;
+    color : indianred;
+}
+
+.iconCrossNeutral {
+    color : orange;
 }
 
 div .box {
