Bugfix: update study page failed for studies without a title (horrible wrong studies) Listen to files uploads Refactor validation icons presentarion (CSS + JSP)

--- a/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
@@ -875,3 +875,25 @@ ol.progtrckr li.progtrckr-todo:before {
 #search-extras {
  top: -50px;
 }
+
+
+.wrong:before{
+
+    content: "\002718";
+    font-weight: bold;
+}
+
+.mandatory {
+    color: red;
+}
+.optional {
+    color: darkorange;
+}
+.ok {
+    color: green;
+}
+
+.ok:before{
+    content: "\002713";
+    font-weight: bold;
+}
