--- a/metabolights-webapps/src/main/webapp/css/metabolights.css
+++ b/metabolights-webapps/src/main/webapp/css/metabolights.css
@@ -26,3 +26,49 @@
 .lp20{
     padding-left: 20px !important;
 }
+
+body{
+    margin: 0 auto !important;
+}
+
+.metabolite-title{
+    background-color: #f1f1f4;
+    padding: 10px 10px;
+    margin-bottom: 5px;
+    border-radius: 5px 5px 0 0;
+}
+
+.metabolite-title h2{
+    margin: 0;
+    padding: 0 0 0 20px;
+    display: inline;
+}
+
+.metabolite-title h3{
+    display: inline;
+    margin: 3px;
+}
+
+
+.metabolite-image{
+    width: 100%;
+    height: auto;
+}
+
+.metabolite-wrapper{
+    border: 1px solid #f1f1f4;
+    padding: 20px 20px;
+    min-height: 100vh;
+}
+
+.tab-content {
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
+    min-height: 50vh;
+}
+
+.nav-tabs {
+    margin-bottom: 0;
+}
