Various minor Validations bugs fixed

--- a/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
@@ -893,6 +893,10 @@ ol.progtrckr li.progtrckr-todo:before {
     color: green;
 }
 
+.override {
+    color: darkorange;
+}
+
 .ok:before{
     content: "\002713";
     font-weight: bold;
